# cafe_website

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  index.css  otel-collector-config.yaml  tailwind.config.js
.sqlx/: query-0cba5bed7988b5cefd4d60ae2df3a0def4c20a0bb890a7f31e493850dd915f18.json  query-0de027c2aa5edd7e5f59a0359c98d43413755687faab4bb72eef363099db2da4.json  query-1215170e439432edee5098d308efca2dbc317c9838a03871240691356d48273e.json  query-12bf85ac5ea8add020c08d71b728f76cc691a24381cacedc49aabb307987151e.json  query-15ec67caaae01fa670375ab5c0742082216b7c2cbf0f1f034b03a6630574a594.json  query-1a9a055413d2d58d86237ef047ff90526fe1914a140bdd519812685338e7fb85.json  query-1bb06efe77065669b0158de2cd74f7b900e2d60431d12be82b53cff7f5948425.json  query-1cd00aab204368723a9bb83fa62d35b0da87c010e6d3c375e0d9546ddccf5ca0.json  query-1ea13bdf8998e57e09fa9aaa884cdca572d0123c62f4c7b6c4bed597d9c95079.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-283347805ad182f0d0b0a7b4cbeb2946bc8a7a33a48e31907acd1ec37c6ff836.json  query-2b7cbf47e3290fd1cd7354779e8ef7aedb49e50b13c3816e74d147c3ad8943d1.json  query-36c316646f8a02b1a71ecbfbb39f67173eab3dd9cf4f875517eb0dc525219e09.json  query-3a726a2954102c4396fb17dcb886bc7b97257d57cc4450adbac29e38421b79d2.json  query-3a830a5477124e1f32b6e14c49b32a242944721d8e8b6f5081651e647cc39ec4.json  query-3e79554e4ba2df46a3da47b1e37e3b13c58ef3897657f405104bc5e404e1ff98.json  query-408c80c4e2c818224baaebd7ddb11b4fd2fac6e4cef7b55d9544f7af93044204.json  query-440462a8cb6f058aa0d78051bced094bb51f4929461d5bdf09a0db9c9024a25f.json  query-44e9c53a88b8c07d60c661aae7bfc2daabd7cabb92924775b9f3b551625b9fd0.json  query-46168a27e30eda481e6183e71594a902378defb35155a25c647210c5a29d1728.json  (+42 more)
migrations/: 20240126011314_email_mods.up.sql  (+12 more)
(+131 files in other folders)
