[package]
name = "cafe_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.19"
axum-sessions = "0.5.0"
dotenvy = "0.15.7"
rand = "0.8.5"
scrypt = "0.11.0"
serde = { version = "1.0.177", features = ["derive"] }
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "postgres", "time"] }
time = { version = "0.3.23", features = ["serde"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs", "trace"] }
