[package]
name = "cafe_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum", "markdown"] }
askama_axum = "0.3.0"
axum = "0.6.19"
axum-extra = { version = "0.8.0", features = ["cookie-private"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
rand = "0.8.5"
scrypt = "0.11.0"
serde = { version = "1.0.177", features = ["derive"] }
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["serde", "v4", "v7"] }
